corrigindo code smells